@@ -22,8 +22,10 @@ define(['app', 'log/Chart', 'log/CounterLogSeriesSupplier'], function (app) {
             instantAndCounterDaySeriesSuppliers: instantAndCounterDaySeriesSuppliers,
             instantAndCounterWeekSeriesSuppliers: instantAndCounterWeekSeriesSuppliers,
             p1DaySeriesSuppliers: p1DaySeriesSuppliers,
+            p1HourSeriesSuppliers: p1HourSeriesSuppliers,
             p1WeekSeriesSuppliers: p1WeekSeriesSuppliers,
             powerReturnedDaySeriesSuppliers: powerReturnedDaySeriesSuppliers,
+            powerReturnedHourSeriesSuppliers: powerReturnedHourSeriesSuppliers,
             powerReturnedWeekSeriesSuppliers: powerReturnedWeekSeriesSuppliers,
             powerReturnedMonthYearSeriesSuppliers: powerReturnedMonthYearSeriesSuppliers
         };
@@ -212,6 +214,56 @@ define(['app', 'log/Chart', 'log/CounterLogSeriesSupplier'], function (app) {
                         yAxis: 1
                     }
                 }
+            ];
+        }
+
+        function p1HourSeriesSuppliers(deviceType) {
+            return [
+                counterLogSeriesSupplier.summingSeriesSupplier({
+                    id: 'p1EnergyUsed',
+                    dataItemKeys: ['v'],
+                    label: 'C',
+                    series: {
+                        type: 'column',
+                        name: $.t('Usage'),
+                        zIndex: 2,
+                        tooltip: {
+                            valueSuffix: ' ' + chart.valueUnits.energy(chart.valueMultipliers.m1),
+                            valueDecimals: 0
+                        },
+						//pointPadding: 0.0,
+						pointPlacement: 0,
+						//pointWidth: 10,
+                        color: 'rgba(3,190,252,0.8)',
+                        yAxis: 0
+                    }
+                })
+            ];
+        }
+        function powerReturnedHourSeriesSuppliers(deviceType) {
+			return [
+				counterLogSeriesSupplier.summingSeriesSupplier({
+					id: 'powerReturned',
+					dataItemKeys: ['r'],
+                    dataIsValid: function (data) {
+                        return data.delivered === true;
+                    },
+					label: 'C',
+					series: {
+						type: 'column',
+						name: $.t('Return'),
+						zIndex: 2,
+						tooltip: {
+							valueSuffix: ' ' + chart.valueUnits.energy(chart.valueMultipliers.m1),
+							valueDecimals: 0
+						},
+						pointPadding: 0.2,
+						pointPlacement: 0,
+						//pointWidth: 10,
+						color: 'rgba(3,252,190,0.8)',
+						yAxis: 0
+					}
+				})
             ];
         }
 
