@@ -15,6 +15,7 @@ define(['app', 'log/Chart'], function (app) {
     app.factory('counterLogParams', function (chart) {
         return {
             chartParamsDay: chartParamsDay,
+            chartParamsHour: chartParamsHour,
             chartParamsWeek: chartParamsWeek,
             chartParamsMonthYear: chartParamsMonthYear,
             chartParamsCompare: chartParamsCompare,
@@ -44,6 +45,51 @@ define(['app', 'log/Chart'], function (app) {
                     device: ctrl.device,
                     sensorType: 'counter',
                     chartName: ctrl.device.SwitchTypeVal === chart.deviceTypes.EnergyGenerated ? $.t('Generated') : $.t('Usage'),
+                    autoRefreshIsEnabled: function () {
+                        return ctrl.logCtrl.autoRefresh;
+                    },
+                    dataSupplier:
+                        _.merge(
+                            {
+                                seriesSuppliers: seriesSuppliers
+                            },
+                            dataSupplierTemplate
+                        )
+                },
+                chartParamsTemplate
+            );
+        }
+
+        function chartParamsHour(domoticzGlobals, ctrl, chartParamsTemplate, dataSupplierTemplate, seriesSuppliers) {
+            return _.merge(
+                {
+                    highchartTemplate: {
+                        chart: {
+                            marginRight: 10
+                        },
+                        xAxis: {
+                            dateTimeLabelFormats: {
+                                hour: '%H:00',
+                                day: '%H:00'
+                            },
+                            tickInterval: 1 * 3600 * 1000
+                        },
+                        tooltip: {
+                            crosshairs: false
+                        },
+						plotOptions: {
+							column: {
+								grouping: false,
+								shadow: false,
+								borderWidth: 0
+							}
+						}
+                    },
+                    ctrl: ctrl,
+                    range: ctrl.range,
+                    device: ctrl.device,
+                    sensorType: 'counter',
+                    chartName: $.t('Usage') + ' / ' + $.t('Hour'),
                     autoRefreshIsEnabled: function () {
                         return ctrl.logCtrl.autoRefresh;
                     },
