@@ -1124,7 +1124,8 @@ $(document).ready(function() {
 	</div>
 	<div id="daymonthyearlog" style="display:none;">
 		<h2 data-i18n="Day">Day</h2>
-		<div id="daygraph" style="height: 300px;"></div>
+		<div id="daygraph" style="height: 300px;">
+		</div>
 		<br>
 		<h2 data-i18n="Month">Month</h2>
 		<div id="monthgraph" style="height: 300px;"></div>
